Release 0.19.4